fix: 还原为 calibreapp/image-actions 并启用 compressOnly 模式以解决 PR 限制问题

--- a/.github/workflows/compress-images.yml
+++ b/.github/workflows/compress-images.yml
@@ -38,7 +38,10 @@ jobs:
 
       - name: Compress Images
         if: steps.filter.outputs.has_images == 'true'
-        uses: Six7/utils-image-compression@v1.0.4
+        uses: calibreapp/image-actions@main
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          compressOnly: true # 开启纯压缩模式，避免其检查 PR 状态
 
       - name: Auto Commit
         if: steps.filter.outputs.has_images == 'true'
@@ -46,6 +49,7 @@ jobs:
         with:
           commit_message: "chore: 自动化压缩图片 [skip ci]"
           branch: main
+
 
 
       - name: Warm up CDN (Preheat)
