--- a/.github/workflows/compress-images.yml
+++ b/.github/workflows/compress-images.yml
@@ -93,7 +93,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_KEY }}
+          password: ${{ secrets.SERVER_PASSWORD }}
           envs: WECHAT_APP_ID,WECHAT_APP_SECRET,IMAGES_LIST
           script: |
             # 1. 准备持久化目录
@@ -112,8 +112,7 @@ jobs:
             fi
             
             # 4. 下载并同步图片
-            IMAGES="${{ steps.filter.outputs.IMAGES_LIST }}"
-            for img_path in $IMAGES; do
+            for img_path in $IMAGES_LIST; do
                 raw_url="https://raw.githubusercontent.com/${{ github.repository }}/main/$img_path"
                 local_filename=$(echo "$img_path" | sed 's/\//_/g') # Flatten path: a/b.jpg -> a_b.jpg
                 
@@ -123,7 +122,8 @@ jobs:
             
             # 5. 执行同步
             echo ">>> [Exec] Running sync logic..."
-            python3 sync_to_wechat.py "$IMAGES"
+            python3 sync_to_wechat.py "$IMAGES_LIST"
+
             
             # 6. 清理临时图片 (保留 history 和 script)
             rm -f *.jpg *.jpeg *.png *.webp
